Fixed grammar and spacing

--- a/styles/Feature.scss
+++ b/styles/Feature.scss
@@ -126,11 +126,12 @@ header .responsive-headline {
  }
 }
  header .banner-text h3 {
-    font: 18px/1.9em 'librebaskerville-regular', serif;
+    font: 22px/1.9em 'librebaskerville-regular', serif;
+    font-weight: bold;
     color: #A8A8A8;
     margin: 0 auto;
     width: 70%;
-    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
+    text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.76);
  }
  header .banner-text h3 span,
  header .banner-text h3 a {
